--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dnb-hugo-head",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
   "description": "head tags for GoHugo",
   "author": {
@@ -31,6 +31,7 @@
   },
   "slug": "dnb-hugo-functions",
   "dependencies": {
+    "jshint": "^2.13.1",
     "mem": "^9.0.1",
     "trim": "^1.0.1"
   }
