--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dnb-hugo-head",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "license": "MIT",
   "description": "head tags for GoHugo",
   "author": {
@@ -14,25 +14,49 @@
   "devDependencies": {
     "@dnb-org/remark-config": "^3.4.4",
     "@dnb-org/standard-version-config": "^3.4.3",
-    "@dnb-org/tools": "^3.4.3"
+    "@dnb-org/tools": "^3.4.5"
   },
   "scripts": {
-    "clean": "run-p clean:*",
+    "audit:hugo": "./bin/dnb-hugo-audit.sh",
+    "build": "run-s build:critical build:hugo",
+    "build:critical": "./bin/build-critical-css.sh",
+    "build:highlights": "hugo gen chromastyles --style=xcode > assets/scss/components/_syntaxhighlighting.scss",
+    "build:hugo": "hugo --gc --minify",
+    "build:script": "tsc",
+    "check-env": "node -e 'console.log(process.env)' | grep npm_config_",
+    "clean": "run-p clean:hugo",
+    "clean:all": "run-p clean:*",
+    "clean:hugo": "rimraf hugo.log hugo_stats.json resources public assets/jsconfig.json .hugo_build.lock",
     "clean:npm": "rimraf node_modules package-lock.json",
+    "commit": "./node_modules/cz-customizable/standalone.js",
+    "lighthouse": "bin/lighthouse.sh",
+    "lint:scripts": "eslint assets/js --ext .ts",
+    "lint:scripts:fix": "eslint assets/js --ext .ts --fix",
+    "lint:styles": "stylelint assets/scss",
+    "lint:styles:fix": "stylelint assets/scss --fix",
+    "lint:templates": "bin/lint-templates.sh",
+    "lint:remark": "remark",
+    "lint:remark2": "remark .",
+    "prettier": "prettier 'assets/**/*.ts'",
+    "prettier:fix": "prettier --write 'assets/**/*.ts'",
     "release": "standard-version --release-as patch -a -t \"v\" --releaseCommitMessageFormat \"chore(release): v{{currentTag}}\" && ./bin/release-hook-postrelease.sh",
     "release:major": "standard-version --release-as major -a -t \"v\" --releaseCommitMessageFormat \"chore(release): v{{currentTag}}\" && ./bin/release-hook-postrelease.sh",
-    "release:minor": "standard-version --release-as minor -a -t \"v\" --releaseCommitMessageFormat \"chore(release): v{{currentTag}}\" && ./bin/release-hook-postrelease.sh"
+    "release:minor": "standard-version --release-as minor -a -t \"v\" --releaseCommitMessageFormat \"chore(release): v{{currentTag}}\" && ./bin/release-hook-postrelease.sh",
+    "serve": "run-p serve:hugo",
+    "serve:hugo": "bin/hugo-dev-server.sh",
+    "serve:script": "tsc --watch",
+    "server": "npm run serve"
   },
   "private": true,
-  "remarkConfig": {
-    "plugins": [
-      "@dnb-org/remark-config"
-    ]
-  },
   "slug": "dnb-hugo-functions",
   "dependencies": {
     "jshint": "^2.13.1",
     "mem": "^9.0.1",
     "trim": "^1.0.1"
+  },
+  "remarkConfig": {
+    "plugins": [
+      "@dnb-org/remark-config"
+    ]
   }
 }
