--- a/.editorconfig
+++ b/.editorconfig
@@ -1,16 +1,12 @@
-; https://editorconfig.org
-; This configuration has opiniated settings for the following formats:
-; *.css *.html *.js *.json *.md *.scss *.sh
-; If a dedicated object is missing for a certain format then the root object is
-; the setup desired.
-
+# see https://editorconfig.org/
 root = true
 
 [*]
-charset = utf-8
-end_of_line = lf
-indent_size = 2
 indent_style = space
+indent_size = 2
+tab_width = 2
+end_of_line = lf
+charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
