--- a/package.json
+++ b/package.json
@@ -12,58 +12,14 @@
     "trim": "^1.0.1"
   },
   "devDependencies": {
-    "@dnb-org/babel-config": "^3.4.8",
-    "@dnb-org/bootstrap-config": "^3.4.8",
-    "@dnb-org/browserslist-config": "^3.4.8",
-    "@dnb-org/commitlint-config": "^3.4.9",
-    "@dnb-org/cssnano-config": "^3.4.9",
-    "@dnb-org/cypress-config": "^3.4.10",
-    "@dnb-org/eslint-config": "^3.4.23",
-    "@dnb-org/postcss-config": "^3.4.9",
-    "@dnb-org/prettier-config": "^3.4.10",
-    "@dnb-org/remark-config": "^3.4.8",
     "@dnb-org/standard-version-config": "^3.4.7",
-    "@dnb-org/stylelint-config": "^3.4.8",
-    "@dnb-org/textlint-config": "^3.4.9",
-    "@dnb-org/tools": "^3.4.9",
-    "@dnb-org/webpack-config": "^3.4.9"
+    "@dnb-org/tools": "^3.4.9"
   },
   "scripts": {
-    "audit:hugo": "./bin/dnb-hugo-audit.sh",
-    "build": "run-s build:critical build:hugo",
-    "build:critical": "./bin/build-critical-css.sh",
-    "build:highlights": "hugo gen chromastyles --style=xcode > assets/scss/components/_syntaxhighlighting.scss",
-    "build:hugo": "hugo --gc --minify",
-    "build:script": "tsc",
-    "check-env": "node -e 'console.log(process.env)' | grep npm_config_",
-    "clean": "run-p clean:hugo",
-    "clean:all": "run-p clean:*",
-    "clean:hugo": "rimraf hugo.log hugo_stats.json resources public assets/jsconfig.json .hugo_build.lock",
-    "clean:npm": "rimraf node_modules package-lock.json",
-    "commit": "./node_modules/cz-customizable/standalone.js",
-    "lighthouse": "bin/lighthouse.sh",
-    "lint:remark": "remark",
-    "lint:remark2": "remark .",
-    "lint:scripts": "eslint assets/js --ext .ts",
-    "lint:scripts:fix": "eslint assets/js --ext .ts --fix",
-    "lint:styles": "stylelint assets/scss",
-    "lint:styles:fix": "stylelint assets/scss --fix",
-    "lint:templates": "bin/lint-templates.sh",
-    "prettier": "prettier 'assets/**/*.ts'",
-    "prettier:fix": "prettier --write 'assets/**/*.ts'",
     "release": "standard-version --release-as patch -a -t \"v\" --releaseCommitMessageFormat \"chore(release): v{{currentTag}}\" && ./bin/release-hook-postrelease.sh",
     "release:major": "standard-version --release-as major -a -t \"v\" --releaseCommitMessageFormat \"chore(release): v{{currentTag}}\" && ./bin/release-hook-postrelease.sh",
-    "release:minor": "standard-version --release-as minor -a -t \"v\" --releaseCommitMessageFormat \"chore(release): v{{currentTag}}\" && ./bin/release-hook-postrelease.sh",
-    "serve": "run-p serve:hugo",
-    "serve:hugo": "bin/hugo-dev-server.sh",
-    "serve:script": "tsc --watch",
-    "server": "npm run serve"
+    "release:minor": "standard-version --release-as minor -a -t \"v\" --releaseCommitMessageFormat \"chore(release): v{{currentTag}}\" && ./bin/release-hook-postrelease.sh"
   },
   "private": true,
-  "remarkConfig": {
-    "plugins": [
-      "@dnb-org/remark-config"
-    ]
-  },
   "slug": "dnb-hugo-head"
 }
