--- a/bin/etc/.env.template
+++ b/bin/etc/.env.template
@@ -1,5 +1,5 @@
 # component information
-SLUG=dnb-hugo-bin
+SLUG=hugo-bin
 
 # dev server
 IP=192.168.1.201
@@ -10,7 +10,7 @@ TESTIP=192.168.1.201
 TESTPORT=8888
 
 # docs automaton path
-TEMPLATEPATH=../dnb-hugo-templates
+TEMPLATEPATH=../hugo-templates
 
 # project slug
-SLUG=dnb-hugo-project
+SLUG=hugo-project
