--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "repository": "davidsneighbour/hugo-head",
   "bugs": "https://github.com/davidsneighbour/hugo-head/issues",
   "devDependencies": {
-    "@davidsneighbour/standard-version-config": "^4.0.8",
-    "@davidsneighbour/tools": "^4.0.9"
+    "@davidsneighbour/config": "^1.0.21"
   },
   "scripts": {
     "release": "standard-version --release-as patch -a -t \"v\" --releaseCommitMessageFormat \"chore(release): v{{currentTag}}\" && ./bin/release/postrelease",
