--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "hugo-head",
   "version": "1.1.15",
   "license": "MIT",
-  "description": "David's Neighbour answer to the question 'What tags belong into the <head> tag of my website?'",
+  "description": "@davidsneighbour's answer to the question 'What tags belong into the <head> tag of my website?'",
   "author": "Patrick Kollitsch <patrick@davids-neighbour.com> (https://davids-neighbour.com)",
   "homepage": "https://github.com/davidsneighbour/hugo-head#readme",
   "repository": "davidsneighbour/hugo-head",
   "bugs": "https://github.com/davidsneighbour/hugo-head/issues",
   "devDependencies": {
-    "@davidsneighbour/config": "^1.0.21"
+    "@davidsneighbour/config": "^1.0.22"
   },
   "scripts": {
     "release": "standard-version --release-as patch -a -t \"v\" --releaseCommitMessageFormat \"chore(release): v{{currentTag}}\" && ./bin/release/postrelease",
