--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,9 +1,12 @@
+[dnb.head]
+charset = "utf-8"
+viewport = "width=device-width, initial-scale=1"
+nobase = true
+
 [dnb.head.styles]
 entrypoint = "scss/style.scss"
 
 [dnb.head.styles.options]
-# options for the compilation of CSS
-# see https://gohugo.io/hugo-pipes/scss-sass/#options
 #transpiler = "dartsass"
 outputStyle = "compressed"
 targetPath = "assets/theme.css"
