--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -2,12 +2,14 @@
 charset = "utf-8"
 viewport = "width=device-width, initial-scale=1"
 nobase = true
+separator = " | "
 
 [dnb.head.styles]
 entrypoint = "scss/style.scss"
+method = "postcss"
 
 [dnb.head.styles.options]
-#transpiler = "dartsass"
 outputStyle = "compressed"
 targetPath = "assets/theme.css"
 enableSourceMap = true
+includePaths = ["node_modules/"]
